# recursive-koopman-learning

./: CMakeLists.txt  README.md  package.xml
config/: balance_poly_sac_kl_params.yaml  balance_poly_sac_rkl_params.yaml  balance_rbf_sac_kl_params.yaml  balance_rbf_sac_rkl_params.yaml  track_traj_poly_sac_kl_params.yaml  track_traj_poly_sac_rkl_params.yaml
include/rkl_cpp/: ConstParams.hpp  Interface.hpp  Koopman.hpp  LQR.hpp  Optim.hpp  SAC.hpp  StewartState.hpp  Utils.hpp
launch/: controller_launch.py
msg/: BallOdometry.msg  ServoAngles.msg
scripts/: calculate_pre_koopman.py  const.py  custom_kmeans.py  desired_ball_state_publisher.py  initial_dataset_vis.ipynb  koopman.py  platform_pose_publisher.py  process_bags.ipynb  process_ball_pos_data.py  ref_traj_publisher.py  test.py  traj_viewer.py
src/: Interface.cpp  Koopman.cpp  LQR.cpp  Main.cpp  Optim.cpp  SAC.cpp  StewartState.cpp  Utils.cpp
